syntax = "proto3";

import "user.proto"

package pb;

option go_package = "./pb";

message UserEvent {
	string event_type = 1;
	User user = 2;
}
